refactor css and update readme

--- a/style.css
+++ b/style.css
@@ -78,10 +78,10 @@ p {
 .card-status {
   font-weight: 800;
   color: var(--dark-grey);
-  font-size: 0.875rem;
+  font-size: clamp(0.75rem, 2vw, 0.875rem);
   background-color: var(--yellow-bg);
   padding: 0.25rem 0.75rem;
-  border-radius: 0.25;
+  border-radius: 0.25rem;
   align-self: flex-start;
 }
 
